--- a/SaneScanner/Info.plist
+++ b/SaneScanner/Info.plist
@@ -35,7 +35,9 @@
 	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>readdle-spark</string>
 		<string>googlegmail</string>
+		<string>ms-outlook</string>
 		<string>inbox-gmail</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
