Rename SaneBackends to Sane, convert to xcframework output, add its own podspec

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,14 @@ Medias
 
 fastlane/report.xml
 
-sane-backends
-sane-libs/arm*
-sane-libs/i386
-sane-libs/x86_64
+Sane-build-log.txt
+Sane-source/
+Sane/ios-*
+Sane/sim-*
+Sane/catalyst-*
+Sane/headers
+
 .DS_Store
-sane-log.txt
 
 ios-usb-framework
 
