--- a/SaneScanner.xcodeproj/xcshareddata/xcschemes/SaneScanner.xcscheme
+++ b/SaneScanner.xcodeproj/xcshareddata/xcschemes/SaneScanner.xcscheme
@@ -83,7 +83,7 @@
       </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
