--- a/SaneScanner/Info.plist
+++ b/SaneScanner/Info.plist
@@ -73,6 +73,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>SYLaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
