Add Spotlight keywords

--- a/Backlit/Info.plist
+++ b/Backlit/Info.plist
@@ -35,6 +35,8 @@
 	<string>23</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>MDItemKeywords</key>
+	<string>Scanner, Scan, Sane</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
 	<key>LSApplicationQueriesSchemes</key>
