Recreate the workspace, reinstall pods, and redo test config

--- a/Backlit.xcodeproj/xcshareddata/xcschemes/BacklitUITests.xcscheme
+++ b/Backlit.xcodeproj/xcshareddata/xcschemes/BacklitUITests.xcscheme
@@ -17,7 +17,7 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "97EDB9151E4924D40012CB7E"
+               BlueprintIdentifier = "978FFF832AC1E8BB0052033F"
                BuildableName = "BacklitUITests.xctest"
                BlueprintName = "BacklitUITests"
                ReferencedContainer = "container:Backlit.xcodeproj">
@@ -35,6 +35,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "F8CBD20C1AF9A58C00B4C221"
+            BuildableName = "Backlit.app"
+            BlueprintName = "Backlit"
+            ReferencedContainer = "container:Backlit.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
