--- a/Backlit/Info.plist
+++ b/Backlit/Info.plist
@@ -80,7 +80,7 @@
 		<string>audio</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>SYLaunchScreen.storyboard</string>
+	<string>SYLaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
