Prevent glass UI

--- a/Backlit/Info.plist
+++ b/Backlit/Info.plist
@@ -87,6 +87,8 @@
 	</array>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleDefault</string>
+	<key>UIDesignRequiresCompatibility</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
